Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-32647

Cannot configure CMake project in Terminal

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 16.0.1
    • Qt Creator 15.0.1, Qt Creator 16.0.0
    • Terminal
    • None
    • Manjaro Linux
    • f9482a62b (16.0)

      The bottom line is that I cannot configure a CMake-based Qt project in Creator's terminal which works fine in gnome-terminal. Since this doesn't happen with all builds of Qt and I cannot know what makes the significant difference, I'm posting instructions how to get into the situation I am in.

      1. Clone qt5.git's dev branch.
        I have it at 8f108aab07e4d2b5b8022e98ffa5433029e08269
      2. In that, initialize qtbase only:
        perl init-repository --module-subset=qtbase
      3. In a separate directory, configure those sources for fuzzing with UBSAN and build them:
        /mnt/qt-bisect/qt5/configure -platform linux-clang -opensource -confirm-license -no-widgets -prefix $PWD/qtbase -release -static -no-gc-binaries -sanitize fuzzer-no-link -sanitize undefined -qt-tiff && nice cmake --build .
        I attached config.opt and config.summary from this build.
      4. Start Creator with empty settings (-tcs).
        I used Creator from the Online Installer.
      5. Open Creator's built-in Terminal (Alt+5)
      6. From that Terminal, in yet another separate directory, try configuring (qt-cmake) a fuzzer from the sources you prepared in steps 1 and 2:
        CXX=clang++ /mnt/qt-bisect/build/qtbase/bin/qt-cmake /mnt/qt-bisect/qt5/qtbase/tests/libfuzzer/gui/image/qimage/loadfromdata/
        Expected: The build succeeds, as it does in gnome-terminal.
        Actual: Configuring fails:
        -- The CXX compiler identification is Clang 19.1.7
        -- Detecting CXX compiler ABI info
        -- Detecting CXX compiler ABI info - done
        -- Check for working CXX compiler: /bin/clang++ - skipped
        -- Detecting CXX compile features
        -- Detecting CXX compile features - done
        -- Performing Test CMAKE_HAVE_LIBC_PTHREAD
        -- Performing Test CMAKE_HAVE_LIBC_PTHREAD - Success
        -- Found Threads: TRUE
        -- Found ZLIB: /usr/lib/libz.so (found version "1.3.1")
        -- Found WrapSystemZLIB: TRUE (found version "1.3.1")
        -- Using system ZLIB.
        -- Found WrapZLIB: TRUE (found version "1.3.1")
        -- Performing Test HAVE_STDATOMIC
        -- Performing Test HAVE_STDATOMIC - Success
        -- Found WrapAtomic: TRUE
        -- Looking for backtrace
        -- Looking for backtrace - found
        -- backtrace facility detected in default set of libraries
        -- Found Backtrace: /usr/include
        -- Found WrapSystemDoubleConversion: /lib/cmake/double-conversion/double-conversionConfig.cmake (found version "3.3.0")
        -- Checking for module 'libb2'
        --   Found libb2, version 0.98.1
        -- Found ICU: /usr/include (found suitable version "76.1", minimum required is "50.1") found components: i18n uc data
        -- Found WrapSystemPCRE2: /usr/lib/libpcre2-16.so (found version "10.45")
        -- Using system PCRE2.
        -- Found WrapPCRE2: TRUE (found version "10.45")
        -- Found WrapZSTD: 1.5.7 (found suitable version "1.5.7", minimum required is "1.3")
        -- Found GLIB2: /usr/lib/libglib-2.0.so
        -- Performing Test HAVE_GETTIME
        -- Performing Test HAVE_GETTIME - Success
        -- Performing Test HAVE_SHM_OPEN_SHM_UNLINK
        -- Performing Test HAVE_SHM_OPEN_SHM_UNLINK - Success
        -- Found WrapRt: TRUE
        -- Found OpenGL: /usr/lib/libOpenGL.so
        -- Found WrapOpenGL: TRUE
        -- Performing Test HAVE_EGL
        -- Performing Test HAVE_EGL - Success
        -- Found EGL: /usr/include (found version "1.5")
        -- Found WrapSystemPNG: /usr/lib/libpng.so;/usr/lib/libz.so (found version "1.6.47")
        -- Using system PNG.
        -- Found WrapPNG: TRUE (found version "1.6.47")
        CMake Error at /lib/cmake/harfbuzz/harfbuzz-config.cmake:7 (message):
          File or directory //include/harfbuzz referenced by variable
          HARFBUZZ_INCLUDE_DIR does not exist !
        Call Stack (most recent call first):
          /lib/cmake/harfbuzz/harfbuzz-config.cmake:22 (set_and_check)
          /mnt/qt-bisect/build/qtbase/lib/cmake/Qt6/FindWrapSystemHarfbuzz.cmake:12 (find_package)
          /mnt/qt-bisect/build/qtbase/lib/cmake/Qt6/QtFindWrapHelper.cmake:69 (find_package)
          /mnt/qt-bisect/build/qtbase/lib/cmake/Qt6/FindWrapHarfbuzz.cmake:6 (qt_find_package_system_or_bundled)
          /usr/share/cmake/Modules/CMakeFindDependencyMacro.cmake:76 (find_package)
          /mnt/qt-bisect/build/qtbase/lib/cmake/Qt6/QtPublicDependencyHelpers.cmake:36 (find_dependency)
          /mnt/qt-bisect/build/qtbase/lib/cmake/Qt6Gui/Qt6GuiDependencies.cmake:46 (_qt_internal_find_third_party_dependencies)
          /mnt/qt-bisect/build/qtbase/lib/cmake/Qt6Gui/Qt6GuiConfig.cmake:40 (include)
          /mnt/qt-bisect/build/qtbase/lib/cmake/Qt6/Qt6Config.cmake:223 (find_package)
          CMakeLists.txt:13 (find_package)
        
        
        CMake Warning at /mnt/qt-bisect/build/qtbase/lib/cmake/Qt6/Qt6Config.cmake:223 (find_package):
          Found package configuration file:
        
            /mnt/qt-bisect/build/qtbase/lib/cmake/Qt6Gui/Qt6GuiConfig.cmake
        
          but it set Qt6Gui_FOUND to FALSE so package "Qt6Gui" is considered to be
          NOT FOUND.
        Call Stack (most recent call first):
          CMakeLists.txt:13 (find_package)
        
        
        -- Configuring incomplete, errors occurred!
        

      FWIW, I noticed that the set command shows very different environment variables in the two terminals, including a different PATH. I attached both.

        1. config.opt
          0.2 kB
        2. config.summary
          8 kB
        3. set.creator
          110 kB
        4. set.gnome-terminal
          105 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            madwinter Marcus Tillmanns
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes