Terminal: Don't add to PATH

Fixes: QTCREATORBUG-32647
Change-Id: I236745b3c3ec04b5cb591bd1b8aaf54c1a3c4241
Reviewed-by: Cristian Adam <cristian.adam@qt.io>
Reviewed-by: Eike Ziller <eike.ziller@qt.io>