src/plugins/terminal/terminalwidget.cpp
@@ -127,8 +127,6 @@ void TerminalWidget::setupPty()
     env.setFallback("COMMAND_MODE", "unix2003");
     env.setFallback("INIT_CWD", QCoreApplication::applicationDirPath());
 
-    // For git bash on Windows
-    env.prependOrSetPath(shellCommand.executable().parentDir());
     if (env.hasKey("CLINK_NOAUTORUN"))
         env.unset("CLINK_NOAUTORUN");
 
